# isend

./: .env  .gitignore  Cargo.toml  LICENSE-MIT  README.md  cli.yaml  log
.github/workflows/: main.yml
archive/: arguments.rs  cli.rs  main.rs  protocol.rs  utils.rs
archive/cli/: cli.yaml  main.rs  typer.rs
archive/clients/: receiver.rs  sender.rs
archive/core/: Cargo.toml
archive/core/src/: arg.rs  client.rs  instruction.rs
archive/src/: cli.rs  main.rs  network.rs  receiver.rs
archive/src/ui/: mod.rs
archive/ui/: terminal.rs  timer.rs
core/: Cargo.toml
core/src/: arg.rs  args.rs  client.rs  communication.rs  instruction.rs  lib.rs  sender.rs  utils.rs
doc/: README.md  communication.md  minimal_available_system.md  process.md  protocol.md
experiments/postgres/: docker-compose.yml
experiments/postgres/pginit/: init.sql
experiments/rust-server-db/: Cargo.toml
experiments/rust-server-db/src/: main.rs
src/: arguments.rs  cli.rs  entities.rs  lib.rs  logger.rs  main.rs  network.rs  protocol.rs  receiver.rs  ref.rs  sender.rs  utils.rs
src/cli/: cli.yaml  main.rs  mod.rs  parser.rs  typer.rs
src/clients/: receiver.rs  sender.rs
src/icore/: arg.rs  currentfile.rs  instruction.rs  message.rs  mod.rs  receiver.rs  sender.rs  utils.rs
src/ui/: mod.rs  terminal.rs  timer.rs
tests/: integration.rs
