[package]
name = "isend"
version = "0.1.0"
authors = ["machengiam <machengiam@gmail.com>"]
edition = "2018"
default-run = "isend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
async-std = {version = "1.6.5", features = ["attributes"]}
icore = {path = "./core"}
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
crossterm = "0.18"
rpassword = "5.0"


[[bin]]
name = "isend"
path = "src/cli/main.rs"
