[package]
name = "isend"
version = "0.1.0"
authors = ["machengim <machengiam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
async-std = {version = "1.7.0", features = ["attributes"]}
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
lazy_static = "1.4.0"
log = "0.4.11"
num_enum = "0.5.1"
rpassword = "5.0"