[package]
name = "icore"
version = "0.1.0"
authors = ["machengim <machengiam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
async-std = {version = "1.6.5", features = ["attributes"]}
lazy_static = "1.4.0"
num_enum = "0.5.1"
rand = "0.7.3"