[package]
name = "rust-server-db"
version = "0.1.0"
authors = ["machengim <macheng83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = [ "attributes" ] }
futures = "0.3"
sqlx = {version = "0.3", features = ["postgres"] }
